[tool.poetry]
name = "enfsolar-dot-com-scraper"
version = "0.1.0"
description = ""
authors = ["Bogdan Boamfa"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
ipdb = "^0.13.2"
tqdm = "^4.46.0"
ipython = "^7.16.3"
lxml = "^4.5.1"
beautifulsoup4 = "^4.9.1"
python-dateutil = "^2.8.1"
tldextract = "^2.2.2"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
